--- a/index.html
+++ b/index.html
@@ -1,104 +1,119 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Currículum de Marvin Chara - Técnico Superior en Sistemas</title>
-  <meta name="description" content="Currículum de Marvin Chara, técnico superior en sistemas, con experiencia en Office, diseño gráfico y administración de Windows.">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Marvin Gastón Chara Achacollo</title>
+    <link rel="stylesheet" href="style.css">
 
-  <!-- Datos estructurados -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Person",
-    "name": "Marvin Gaston Chara Achacollo",
-    "jobTitle": "Técnico Superior en Sistemas",
-    "email": "marvinchara14@gmail.com",
-    "telephone": "+59173842984",
-    "image": "foto.jpg",
-    "address": {
-      "@type": "PostalAddress",
-      "addressLocality": "Oruro",
-      "addressRegion": "Bolivia"
+    <!-- Datos estructurados con schema.org -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Marvin Gaston Chara Achacollo",
+      "image": "foto.jpg",
+      "jobTitle": "Desarrollador Web",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Bolivia"
+      },
+      "email": "mailto:marvin@example.com",
+      "telephone": "+591 70000000"
     }
-  }
-  </script>
+    </script>
 </head>
 <body>
-  <!-- Skip link -->
-  <a href="#main-content" class="skip-link">Saltar al contenido principal</a>
+    <!-- Skip link para accesibilidad -->
+    <a href="#contenido" class="skip-link">Saltar al contenido principal</a>
 
-  <div class="cv-container">
+    <header>
+        <h1>Acerca de mi persona</h1>
+        <!-- Menú de navegación -->
+        <nav>
+            <ul class="menu">
+                <li><a href="#datos">Datos Personales</a></li>
+                <li><a href="#perfil">Perfil Profesional</a></li>
+                <li><a href="#formacion">Formación Académica</a></li>
+                <li><a href="#titulos">Títulos Obtenidos</a></li>
+                <li><a href="#habilidades">Habilidades y Conocimientos</a></li>
+               
+            </ul>
+        </nav>
+    </header>
 
-    <!-- Columna izquierda: Sidebar -->
-    <aside class="sidebar">
-      <div class="profile-pic">
-        <img src="foto.jpg" alt="Foto de perfil de Marvin Chara" loading="lazy">
-      </div>
+    <main id="contenido">
+        <!-- Sección de Datos Personales -->
+        <section id="datos" class="datos-personales">
+            <h2>Datos Personales</h2>
+            <div class="perfil">
+                <img src="foto.jpg" alt="Foto de perfil de Marvin Gastón Chara Achacollo" loading="lazy">
+                <div class="info">
+                    <h3 class="nombre">Marvin Gaston Chara Achacollo</h3>
+                    <ul>
+                        <li><strong>Fecha de nacimiento:</strong> 23 de abril de 2002</li>
+                        <li><strong>Lugar de nacimiento:</strong> ORURO - BOLIVIA</li>
+                        <li><strong>Cédula de identidad:</strong> 7367804</li>
+                        <li><strong>Correo:</strong> marvinchara14@gmail.com</li>
+                        <li><strong>Teléfono:</strong> +591 73842984</li>
+                        <li><strong>Dirección:</strong> Santa Barbara Tacna y Arica</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
 
-      <section class="section">
-        <h2>Datos Personales</h2>
-        <p><strong>Fecha de nacimiento:</strong> 23 de abril de 2000</p>
-        <p><strong>Lugar de nacimiento:</strong> Oruro - Bolivia</p>
-        <p><strong>Cédula de identidad:</strong> 7367804</p>
-        <p><strong>Teléfono:</strong> 73842984</p>
-        <p><strong>Dirección:</strong> Santa Bárbara Tacna y Arica</p>
-        <p><strong>Email:</strong> marvinchara14@gmail.com</p>
-      </section>
+         <!-- Sección de Referencias -->
+        <section id="perfil">
+            <h2>Perfil Profesional</h2>
+            <ul>
+                <p>Soy Técnico superior en Sistemas Informáticos y Técnico Medio en Secretariado Ejecutivo, cuento con
+                  experiencia básica en el manejo del sistema operativo Windows 10 y conocimiento avanzado en el manejo de paquetes
+                  de office 2016 como Word, PowerPoint, Publisher, Excel y Access. Cuento con conocimiento basico en base de datos y
+                  uso de programas y gestores de base de datos como SQL Server, Laragon, AppServ. Tengo conocimiento básico en diseño
+                  gráfico y manejo de programas de edicion como Photoshop e Ilustrator. Cuento con conocimiento
+                  acerca de la Mecanografía Computarizada y conocimiento del teclado, tambien manejo programas de escritura para mejorar
+                  mis habilidades.
+                </p>
 
-      <section class="section">
-        <h2>Formación Académica</h2>
-        <p><strong>Estudios Primarios:</strong> Unidad Educativa “San Ignacio de Loyola 2”</p>
-        <p><strong>Estudios Secundarios:</strong> Unidad Educativa “Santa Claudina Thevenet”</p>
-        <p><strong>Estudios Profesionales:</strong> Instituto Técnico “Jesús María”</p>
-        <p><strong>Estudios Especializados:</strong> Universidad Pública de El Alto</p>
-      </section>
-    </aside>
+            </ul>
+        </section>
 
-    <!-- Columna derecha: Contenido principal -->
-    <main id="main-content" class="main-content">
-      <header class="header">
-        <h1>Marvin Gaston Chara Achacollo</h1>
-      </header>
+        <!-- Sección de Formación Académica -->
+        <section id="formacion">
+            <h2>Formación Académica</h2>
+            <ul>
+                <li><strong>Estudios Primarios:</strong>Unidad Educativa “San Ignacio de Loyola 2”</li>
+                <li><strong>Estudios Secundarios:</strong>Unidad Educativa “Santa Claudina Thevenet”</li>
+                <li><strong>Estudios Profesionales:</strong>Instituto Técnico “Jesús María””</li>
+            </ul>
+        </section>
 
-      <section class="section">
-        <h2>Perfil Profesional</h2>
-        <p>
-          Técnico superior con habilidades y conocimientos en la computadora, experto en manejo de paquetes de Office,
-          uso de herramientas gráficas como Photoshop y manejo básico del sistema operativo Windows.
-        </p>
-      </section>
+        <!-- Sección de Experiencia Laboral -->
+        <section id="titulos">
+            <h2>Títulos Obtenidos</h2>
+            <ul>
+                <li><strong>Título de bachiller en humanidades:</strong>Unidad Educativa “Santa Claudina Thevenet”</li>
+                <li><strong>Título de técnico medio en secretariado:</strong>Unidad Educativa “Santa Claudina Thevenet”</li>
+                <li><strong>Título de técnico superior en sistemas:</strong>Instituto Técnico “Jesús María”</li>
+            </ul>
+        </section>
 
-      <section class="section">
-        <h2>Habilidades y Conocimientos</h2>
+        <!-- Sección de Habilidades -->
+        <section id="habilidades">
+            <h2>Habilidades y Conocimientos</h2>
+            <ul>
+                <li>Manejo de paquetes de Microsoft Office 2016 y 2019</li>
+                <li>Conocimiento en Gestión de bases de datos MySQL</li>
+                <li>Conocimiento a la introducción a la mecanografía computarizada y manejo básico del teclado</li>
+                <li>Conocimiento básico del sistema operativo Windows 10 y solucion a problemas de software</li>
+                <li>Conocimiento básico en programas de diseño grafico como Photoshop e Ilustrator</li>
 
-        <h3>Habilidades</h3>
-        <ul>
-          <li>Habilidad en el manejo de programas de Office 2016 y 2019</li>
-          <li>Habilidad en soluciones básicas del sistema operativo Windows 10</li>
-        </ul>
-
-        <h3>Conocimientos</h3>
-        <ul>
-          <li>Conocimientos básicos en lenguajes de etiqueta HTML y lenguaje de estilos CSS</li>
-          <li>Conocimientos básicos en Photoshop e Illustrator</li>
-          <li>Conocimientos básicos en bases de datos SQL</li>
-          <li>Conocimientos básicos de introducción a la mecanografía computarizada</li>
-        </ul>
-      </section>
-
-      <section class="section">
-        <h2>Títulos Obtenidos</h2>
-        <ul>
-          <li><strong>Título de Bachiller en Humanidades</strong> - Unidad Educativa “Santa Claudina Thevenet” - 2019</li>
-          <li><strong>Título de Técnico Medio en Secretariado</strong> - Unidad Educativa “Santa Claudina Thevenet” - 2019</li>
-          <li><strong>Título de Técnico Superior en Sistemas</strong> - Instituto Técnico “Jesús María” - 2023</li>
-          <li><strong>Diplomado en Educación Superior basado en el modelo académico por competencias</strong> - Universidad Pública de El Alto "UPEA" - 2024</li>
-        </ul>
-      </section>
+            </ul>
+        </section>
     </main>
 
-  </div>
+    <footer>
+        <p>&copy; 2025 Marvin Gaston Chara Achacollo</p>
+    </footer>
 </body>
 </html>
